fixes distorted images

--- a/src/Components/OnlineChallenge/OnlineChallenge.module.css
+++ b/src/Components/OnlineChallenge/OnlineChallenge.module.css
@@ -14,6 +14,7 @@
 .item > img {
   flex: 0 1 auto;
   width: 300px;
+  object-fit: contain;
   margin: 0 40px 40px 0;
 }
 
